--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -64,9 +64,7 @@ Artifact:
       CommandContent: |-
         mkdir -p /root/application
         mkdir -p "/root/application/mcp"
-        if [ -e "/root/code/mcp/open-webui" ]; then cp -r "/root/code/mcp/open-webui" "/root/application/mcp/"; fi
-        if [ -e "/root/code/mcp/docker-compose.yaml" ]; then cp -r "/root/code/mcp/docker-compose.yaml" "/root/application/mcp/"; fi
-        if [ -e "/root/code/.env" ]; then cp -r "/root/code/.env" "/root/application/"; fi
+        if [ -e "/root/code/mcp/" ]; then cp -r "/root/code/mcp/" "/root/application/mcp/"; fi
         cd /root/application
         sed -i 's/pull_policy: always/pull_policy: if_not_present/g' mcp/docker-compose.yaml
         docker compose -f mcp/docker-compose.yaml build 
