--- a/mcp/docker-compose.yaml
+++ b/mcp/docker-compose.yaml
@@ -4,5 +4,5 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./config.json:/app/config.json
+      - /root/config.json:/app/config.json
     restart: unless-stopped
