--- a/mcp/docker-compose.yaml
+++ b/mcp/docker-compose.yaml
@@ -1,8 +1,11 @@
 services:
   mcpo-service:
+    container_name: mcpo-service
     build: .
     ports:
       - "8000:8000"
     volumes:
       - /root/config.json:/app/config.json
     restart: unless-stopped
+    environment:
+      API_KEY: ${MCP_KEY}
