--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -44,14 +44,11 @@ Service:
   ServiceInfo:
     # 英文版可以再配置Locale为en-US的服务信息
   - Locale: zh-CN
-    Name: aliyun-computenest/quickstart-mcp-owpa
-    ShortDescription: Service description
+    Name: MCP Server社区版
+    ShortDescription: 一键批量部署MCP
     Image: 
-      https://service-info-public.oss-cn-hangzhou.aliyuncs.com/1853370294850618/service-image/bfd30cc4-e959-4093-b5cb-77a05058b911.png
-    Softwares:
-      - Locale: zh-CN
-        Name: mcpo
-        Version: 0.0.12
+      https://service-info-public.oss-cn-hangzhou.aliyuncs.com/1853370294850618/service-image/ba45d5c8-8654-44a9-a60a-a3090a958c77.png
+    SoftwareInfos: []
 Artifact:
   EcsImage:
     ArtifactType: EcsImage
