--- a/.computenest/ros_templates/template.yaml
+++ b/.computenest/ros_templates/template.yaml
@@ -26,9 +26,9 @@ Parameters:
       CharacterClasses:
         - Class: "lowercase"
           min: 4
-        - Class: "camelcase"
+        - Class: "uppercase"
           min: 4
-        - Class: "digit"
+        - Class: "number"
           min: 2
   VpcOption:
     Type: String
