--- a/.computenest/ros_templates/template-final.yaml
+++ b/.computenest/ros_templates/template-final.yaml
@@ -13,6 +13,8 @@ Parameters:
     Label:
       zh-cn: MCP运行配置
       en: MCP Running Configuration
+
+
   MCP_KEY:
     Type: String
     Description:
@@ -303,25 +305,11 @@ Resources:
       CommandContent:
         Fn::Sub:
           - |
-
-            generate_mcp_servers() {
-                local servers_json=("$@")
-                # 使用jq处理数据，生成目标格式
-                printf '%s\n' "${servers_json[@]}" | jq -s 'reduce .[] as $item (
-                { "mcpServers": {} };
-                .mcpServers[$item.ServerCode] = {
-                command: $item.command,
-                args: $item.args
-              } + (if ($item | has("env")) then { env: $item.env } else {} end)
-                )'
-            }
-            
-            # 调用函数并获取结果
-            result=$(generate_mcp_servers "${MCP_CONFIG[@]}")
             cd /root
             cat > config.json << EOF
-            ${!result}
+            ${McpConfigJson}
             EOF
+            
             sed -i "s|\${!MCP_KEY}|${mcp_KEY}|g" /root/application/mcp/docker-compose.yaml
 
             file_path="/etc/systemd/system/quickstart-mcp.service"
@@ -370,9 +358,6 @@ Resources:
               Ref: ALIYUN::Region
             mcp_KEY:
               Ref: MCP_KEY
-            MCP_CONFIG:
-              Ref: McpConfigJson
-
 Outputs:
   mcp_server_address:
     Lable:
