--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -48,10 +48,10 @@ Service:
     ShortDescription: 一键批量部署MCP
     Image: 
       https://service-info-public.oss-cn-hangzhou.aliyuncs.com/1853370294850618/service-image/ba45d5c8-8654-44a9-a60a-a3090a958c77.png
-    Softwares:
-      - Locale: zh-CN
-        Name: mcpo
-        Version: 0.0.12
+    SoftwareInfos:
+    - Name: mcpo
+      Version: 0.0.12
+      Locale: zh-CN
 Artifact:
   EcsImage:
     ArtifactType: EcsImage
