--- a/.computenest/config.yaml
+++ b/.computenest/config.yaml
@@ -37,6 +37,49 @@ Service:
         ArchitectureDiagramUrl: 'resources/architecture/architecture.jpg'
         AllowedRegions:
         - ap-southeast-1
+        PredefinedParameters:
+        - Name: 热卖套餐，特价99元/年
+          Parameters:
+            EcsInstanceType:
+            - ecs.e-c1m1.large
+            PayType: PrePaid
+            PayPeriodUnit: Year
+            InternetChargeType: PayByTraffic
+            InternetMaxBandwidthOut: 8
+            PayPeriod: 1
+          OrderList:
+          - EcsInstanceType
+          - PayType
+          - PayPeriodUnit
+          - PayPeriod
+          - InternetChargeType
+          - InternetMaxBandwidthOut
+          Type: Normal
+        - Name: 尝鲜套餐，只需0.4元/小时
+          Parameters:
+            EcsInstanceType:
+            - ecs.u1-c1m2.large
+            PayType: PostPaid
+            InternetChargeType: PayByTraffic
+            InternetMaxBandwidthOut: 8
+          OrderList:
+          - EcsInstanceType
+          - PayType
+          - PayPeriodUnit
+          - PayPeriod
+          - InternetChargeType
+          - InternetMaxBandwidthOut
+          Type: Normal
+        - Name: 自定义套餐
+          Parameters: {}
+          OrderList:
+          - EcsInstanceType
+          - PayType
+          - PayPeriodUnit
+          - PayPeriod
+          - InternetChargeType
+          - InternetMaxBandwidthOut
+          Type: Custom
       ArtifactRelation:
         ecs_image_quickstart-mcp:
           ArtifactId: ${Artifact.EcsImage.ArtifactId}
@@ -47,25 +90,68 @@ Service:
       ArchitectureDiagramUrl: 'resources/architecture/architecture.jpg'
       AllowedRegions:
       - ap-southeast-1
+      PredefinedParameters:
+      - Name: 热卖套餐，特价99元/年
+        Parameters:
+          EcsInstanceType:
+          - ecs.e-c1m1.large
+          PayType: PrePaid
+          PayPeriodUnit: Year
+          InternetChargeType: PayByTraffic
+          InternetMaxBandwidthOut: 8
+          PayPeriod: 1
+        OrderList:
+        - EcsInstanceType
+        - PayType
+        - PayPeriodUnit
+        - PayPeriod
+        - InternetChargeType
+        - InternetMaxBandwidthOut
+        Type: Normal
+      - Name: 尝鲜套餐，只需0.4元/小时
+        Parameters:
+          EcsInstanceType:
+          - ecs.u1-c1m2.large
+          PayType: PostPaid
+          InternetChargeType: PayByTraffic
+          InternetMaxBandwidthOut: 8
+        OrderList:
+        - EcsInstanceType
+        - PayType
+        - PayPeriodUnit
+        - PayPeriod
+        - InternetChargeType
+        - InternetMaxBandwidthOut
+        Type: Normal
+      - Name: 自定义套餐
+        Parameters: {}
+        OrderList:
+        - EcsInstanceType
+        - PayType
+        - PayPeriodUnit
+        - PayPeriod
+        - InternetChargeType
+        - InternetMaxBandwidthOut
+        Type: Custom
+    ServiceInstanceNameRule:
+      Prefix: mcp-
+      UseDefaultValue: true
   ServiceType: private
   ServiceInfo:
     # 英文版可以再配置Locale为en-US的服务信息
   - Locale: zh-CN
     Name: MCP Server社区版
-    ShortDescription: 本服务创造性地解决了传统MCP市场的以下问题：
-                      1. 每次只能选择单个MCP工具进行部署。--本服务支持多选MCP工具同时部署
-                      2. 不能同时兼容OpenAPI和SSE的方式调用工具，这导致只能适配部分平台。--本服务支持两种方式调用，支持Dify，Cherry Studio，OpenWebUI等AI助手。
-                      3. 无法灵活增减要使用的MCP工具。--本服务支持通过变配动态增删要使用的MCP工具。
-
+    ShortDescription: "本服务创造性地解决了传统MCP市场的以下问题：\n  1.  本服务支持多选MCP工具同时部署\n  2.  本服务支持OpenAPI和SSE的两种方式调用，支持Dify，Cherry
+      Studio，OpenWebUI等AI助手。\n  3. 本服务支持通过变配动态增删要使用的MCP工具。"
     Image: 
       https://service-info-public.oss-cn-hangzhou.aliyuncs.com/1853370294850618/service-image/ba45d5c8-8654-44a9-a60a-a3090a958c77.png
     Softwares:
-      - Name: mcpo
-        Version: 0.0.12
-        Locale: zh-CN
-      - Name: higress
-        Version: 2.1.1
-        Locale: zh-CN
+    - Name: mcpo
+      Version: 0.0.12
+      Locale: zh-CN
+    - Name: higress
+      Version: 2.1.1
+      Locale: zh-CN
 Artifact:
   EcsImage:
     ArtifactType: EcsImage
