--- a/.computenest/service_test/ECS单机版.yaml
+++ b/.computenest/service_test/ECS单机版.yaml
@@ -1,9 +1,13 @@
-caseId: stc-51ee9b1b55894ccdbdc8
-parameters:
-  EcsInstanceType: $[iact3-auto]
-  InstancePassword: $[iact3-auto]
-  PayType: PostPaid
-  VSwitchCidrBlock: 192.168.1.0/24
-  VpcCidrBlock: 192.168.0.0/16
-  VpcOption: NewVPC
+caseId: stc-59321b435f0740059c8b
 templateName: ECS单机版
+parameters:
+  MCP_KEY: "123456aA"
+  InternetMaxBandwidthOut: "10"
+  McpConfigJson: '[{"serverCode":"time","env":{},"command":"uvx","args":["mcp-server-time"]}]'
+  VpcCidrBlock: "192.168.0.0/16"
+  VpcOption: "NewVPC"
+  PayType: "PostPaid"
+  EcsInstanceType: ecs.u1-c1m2.large
+  VSwitchCidrBlock: "192.168.1.0/24"
+  InternetChargeType: PayByTraffic
+  InstancePassword: "$[iact3-auto]"
